--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # Testing
 /coverage
@@ -11,34 +12,19 @@
 # Next.js
 /.next/
 /out/
-
-# Production
 /build
 
-# Misc
-.DS_Store
-*.pem
+# VSCode
+.vscode/
 
-# Debug
+# Local Environment Variables
+.env*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Local Environment Variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Turbopack
-.turbo
-
-# IDE
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Other
+.DS_Store
+*.pem
